# SDL-Relative-Mouse-Mode

./: CMakeLists.txt  main.cpp
